test/Preprocessor/missing-system-header.h
#pragma lfort system_header
#include "not exist"  // expected-error {{file not found}}
